Fix text alignment of sidebar

--- a/sass/core/navigation/sidenav/_sidebar.sass
+++ b/sass/core/navigation/sidenav/_sidebar.sass
@@ -4,6 +4,7 @@
     width: map-get($dimensions, sidenav_width)
     left: 1rem
     margin: 0
+    text-align: left
 
 #sideNavigation h2
     line-height: 1.6rem
